Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.19_03   2017-07-07 10:14:25 -0400
  - Use Test2::V0 instead of Test2::Bundle::Extended for Test2 tests

1.19_02   2017-06-21 17:06:47 -0400
  - Identical to 1.19_01

1.19_01   2017-05-01 06:12:01 -0400
  - Use Capture::Tiny instead of IPC::Run3 (Paul Cochrane/PTC++ gh#4, gh#15)
  - Minor documentation fixes (Paul Cochrane/PTC++)

1.18      2017-04-12 07:01:14 -0400
  - Production release identical to 1.17_02 release.

1.17_02   2017-04-10 08:39:46 -0400
  - Use three argument open

1.17_01   2017-04-10 06:51:38 -0400
  - Handle scripts with -T taint mode (gh#13)

1.16      2017-03-04 12:16:10 -0500
  - Stricter useage of plans.

1.15      2017-02-14 07:08:51 +1100
  - Fix bug where list reference arguments to script_compiles
    and script_runs are modified (gh#9)

1.14      2016-10-13 11:04:48 -0400
  - Fix a regex in a test that fails on recent versions of
    Test2 on Windows (possibly others) (gh#8)
  - One of the tests was unreasonably slow, so it does
    not get run for users, but will be used for development
    only
  - Remove warning condition that happens with at least some
    older versions of Perl when using quotemeta without
    parentheses (gh#7 Thanks Brendan Byrd)

1.12      2016-05-02 11:18:01 -0400
  - Production release identical to 1.11_03 release.

1.11_03   2016-04-28 06:45:52 -0400
  - Check for IO errors on temporary .pm file

1.11_02   2016-04-27 13:15:35 -0400
  - One possible fix for gh#5
    (see https://github.com/plicease/Test-Script/issues/5)

1.11_01   2016-04-27 12:28:33 -0400
  - Including some optional Test2 based tests that should
    only be run with a merged Test2 / Test::Builder
    (currently a dev release as Test::Simple on CPAN)

1.10      2015-05-12 05:15:41 -0400
  - Work around for buggy IPC::Run3 0.048 on MSWin32
    On Windows we probe for and mitigate a bug in IPC::Run3
    (see https://github.com/plicease/Test-Script/issues/1 for details)