@@ -1,6 +1,7 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+  - Add support for stdin option that was lost in the Capture::Tiny migration
 
 1.19_03   2017-07-07 10:14:25 -0400
   - Use Test2::V0 instead of Test2::Bundle::Extended for Test2 tests
